<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Free Food</string>
    <string name="ActivityAddFood_insideBuildingHint">Where in the building?</string>
    <string name="ActivityAddFood_description_hint">Which food?</string>
    <string name="ActivityAddFood_num_people_hint">For how many people?</string>
    <string name="action_settings">Free food</string>
    <string name="SignUpActivity_EnterYourName">Please enter your name:</string>
    <string name="SignUpActivity_NameHint">e.g: Albert</string>
    <string name="SignUpActivity_Done">Done</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="addActivityTitle">Found free food!</string>
    <string name="choose_food_row_dismiss_question">Dismiss?</string>
    <string name="add_food_description">Description\n\nwhere is the food?\nfor how many people?\nspecial notes?</string>
    <string name="content_des_pooh">pooh icon</string>
    <string name="content_des_drinks">drinks icon</string>
    <string name="content_des_coffee">coffee</string>
    <string name="content_des_beer">beer</string>
    <string name="content_des_pizza">pizza icon</string>
    <string name="add_food_title">What Food?</string>
    <string name="add_food_publish_app">Publish to all other users in the app</string>
    <string name="add_food_publish_both">Publish Both!</string>
    <string name="add_food_publish_fb">publish only to facebook friends</string>
    <string name="btn_back">Back</string>
    <string name="content_des_clear_list_button">clear the list</string>
    <string name="content_des_refresh_list_button">refresh the list</string>
    <string name="content_des_add_food_button">add another food</string>

</resources>
