<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/sv_add_scroll"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/add_food_title"
                android:inputType="text"
                android:lines="1"
                android:maxLength="40"
                android:selectAllOnFocus="true"
                android:textSize="40sp" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_views">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/ib_add_thmb_drinks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:alpha=".15"
                        android:contentDescription="@string/content_des_drinks"
                        android:src="@drawable/drinks" />

                    <ImageButton
                        android:id="@+id/ib_add_thmb_coffee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:alpha=".15"
                        android:contentDescription="@string/content_des_coffee"
                        android:src="@drawable/coffee" />

                    <ImageButton
                        android:id="@+id/ib_add_thmb_pooh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_des_pooh"
                        android:src="@drawable/pooh_icon" />

                    <ImageButton
                        android:id="@+id/ib_add_thmb_pizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:alpha=".15"
                        android:contentDescription="@string/content_des_pizza"
                        android:src="@drawable/pizza" />
                </LinearLayout>
            </HorizontalScrollView>


            <EditText
                android:id="@+id/et_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_views"
                android:gravity="top"
                android:hint="@string/add_food_description"
                android:inputType="textMultiLine"
                android:lines="7"
                android:maxLength="500"
                android:selectAllOnFocus="true"
                android:textSize="25sp" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageButton
                android:id="@+id/ib_add_publish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/content_des_add_food_button"
                android:scaleType="centerInside"
                android:src="@drawable/add_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageButton
                android:id="@+id/ib_add_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/btn_back"
                android:scaleType="centerInside"
                android:src="@drawable/back_arrow_light" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>