<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseFoodActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
    <ListView android:id="@+id/lv_FoodShowList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageButton
                android:id="@+id/ib_showfood_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/btn_back"
                android:scaleType="centerInside"
                android:src="@drawable/back_arrow_light" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_showfood_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_des_refresh_list_button"
                android:scaleType="centerInside"
                android:src="@drawable/refresh_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageButton
                android:id="@+id/ib_showfood_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_des_clear_list_button"
                android:scaleType="centerInside"
                android:src="@drawable/trash_icon" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
